# easy_tpt

./: .gitignore  Dockerfile  LICENSE  README.md  run_az_export.sh  run_s3_export.sh
helpers/: pyproject.toml  run_job.py
templates/: teradata_creds_template.jinja
templates/azure/: credentials.jinja  job_template.jinja
templates/s3/: job_template.jinja
