[tool.poetry]
name = "easy_tpt"
version = "0.1.0"
description = ""
authors = ["David <david.ostler001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
template = "^0.7.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
